--- a/static/style.css
+++ b/static/style.css
@@ -54,6 +54,10 @@ button:hover {
     background-color: #e0e0e0;
 }
 
+button.selected {
+    background-color: #d0d0d0;
+}
+
 .results {
     display: flex;
     justify-content: space-between;
@@ -70,4 +74,9 @@ pre {
     border-radius: 4px;
     white-space: pre-wrap;
     word-wrap: break-word;
+}
+
+.highlight {
+    background-color: #90EE90;
+    padding: 2px 0;
 }
